--- a/ServicioAlmacen/nbproject/private/private.properties
+++ b/ServicioAlmacen/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Adrian\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=C:\\Users\\raulp\\AppData\\Roaming\\NetBeans\\22\\build.properties
