El servidor ahora es funcional gracias a raul

--- a/GestorAlmacenes_Servidor/nbproject/project.properties
+++ b/GestorAlmacenes_Servidor/nbproject/project.properties
@@ -78,8 +78,8 @@ main.class=gestoralmacenes_servidor.GestorAlmacenes_Servidor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
-project.ServicioAlmacen=../Practica-RMI/ServicioAlmacen
+platform.active=JDK_22
+project.ServicioAlmacen=../ServicioAlmacen
 reference.ServicioAlmacen.jar=${project.ServicioAlmacen}/dist/ServicioAlmacen.jar
 run.classpath=\
     ${javac.classpath}:\
