--- a/GestorAlmacenes_Cliente/nbproject/private/private.properties
+++ b/GestorAlmacenes_Cliente/nbproject/private/private.properties
@@ -5,4 +5,5 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Adrian\\AppData\\Roaming\\NetBeans\\22\\build.properties
+project.ServicioAlmacen=C:\\Users\\raulp\\Documents\\NetBeansProjects\\Practica-RMI\\ServicioAlmacen
+user.properties.file=C:\\Users\\raulp\\AppData\\Roaming\\NetBeans\\22\\build.properties
