--- a/GestorAlmacenes_Servidor/nbproject/project.properties
+++ b/GestorAlmacenes_Servidor/nbproject/project.properties
@@ -47,8 +47,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=21
-javac.target=21
+javac.source=22
+javac.target=22
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -78,7 +78,7 @@ main.class=gestoralmacenes_servidor.GestorAlmacenes_Servidor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_22
+platform.active=default_platform
 project.ServicioAlmacen=../ServicioAlmacen
 reference.ServicioAlmacen.jar=${project.ServicioAlmacen}/dist/ServicioAlmacen.jar
 run.classpath=\
