--- a/GestorAlmacenes_Cliente/nbproject/project.properties
+++ b/GestorAlmacenes_Cliente/nbproject/project.properties
@@ -78,7 +78,7 @@ main.class=gestoralmacenes_cliente.GestorAlmacenes_Cliente
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_22
 project.ServicioAlmacen=../ServicioAlmacen
 reference.ServicioAlmacen.jar=${project.ServicioAlmacen}/dist/ServicioAlmacen.jar
 run.classpath=\
